[project]
name = "ComfyUI_QwenVL"
description = "This is an implementation of [Qwen3-VL](https://github.com/QwenLM/Qwen3-VL) for [ComfyUI](https://github.com/comfyanonymous/ComfyUI), which supports for text-based and single-image queries."
version = "2.1.1"
license = { file = "LICENSE" }
dependencies = ["torch", "torchvision", "numpy", "pillow", "huggingface_hub", "transformers", "bitsandbytes","accelerate","qwen-vl-utils","optimum"]

[project.urls]
Repository = "https://github.com/alexcong/ComfyUI_QwenVL"

[tool.comfy]
PublisherId = "alexcong"
DisplayName = "ComfyUI_QwenVL"